force-app/main/default/objects/DTS_Amadeus_Organizations__c/DTS_Amadeus_Organizations__c.object-meta.xml
<CustomObject>
    <description>Each connected Amadeus Salesforce Instance for the Cross Orgs Project will have only one record with its basic details for identification and are manually created. This is used as the Parent object to link other Child objects in the callouts. Do not create new records or change records without Stuart Emery`s Authorization.
//NICC-046831</description>
    <label>Amadeus Organizations</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amadeus Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>