force-app/main/default/objects/DTS_Amadeus_Organizations__c/fields/CalloutMDT__c.field-meta.xml
<CustomField>
    <fullName>CalloutMDT__c</fullName>
    <description>This field should be populated only by developers and match it with the custom meta data type or named credentials related to the connected org. This unique value should also be added to the DTS_CrossOrgs_SR. Make it visible only to System Admins</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field should be populated only by developers and match it with the custom meta data type or named credentials related to the connected org</inlineHelpText>
    <label>Callout MDT</label>
    <length>40</length>
    <type>Text</type>
</CustomField>