force-app/main/default/objects/DTS_Amadeus_Organizations__c/fields/OrgID__c.field-meta.xml
<CustomField>
    <fullName>OrgID__c</fullName>
    <description>Connected External Salesforce Organization ID. Not used in code. Only in reports</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Unique Org ID added just to distinguish the orgs. Manually populated at the time of creating Org records</inlineHelpText>
    <label>Org ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>