force-app/main/default/objects/DTS_Amadeus_Organizations__c/fields/OrgInstance__c.field-meta.xml
<CustomField>
    <fullName>OrgInstance__c</fullName>
    <description>Salesforce Instances for reference. Not used in code. Only in Reports</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Org Instance added just to distinguish the orgs. Manually populated at the time of creating Org records</inlineHelpText>
    <label>Org Instance</label>
    <length>20</length>
    <type>Text</type>
</CustomField>