force-app/main/default/objects/DTS_Amadeus_Organizations__c/listViews/Cross_Org_Amadeus_Organizations.listView-meta.xml
<ListView>
    <fullName>Cross_Org_Amadeus_Organizations</fullName>
    <columns>NAME</columns>
    <columns>OrgID__c</columns>
    <columns>OrgInstance__c</columns>
    <columns>OrgOwner__c</columns>
    <columns>BusinessOwner__c</columns>
    <columns>Description__c</columns>
    <columns>CalloutMDT__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Amadeus Organizations</label>
</ListView>